--- a/webhid.bib
+++ b/webhid.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Thomas Steiner at 2020-02-13 10:02:10 +0100 
+%% Created for Thomas Steiner at 2021-02-27 23:04:07 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -16,30 +16,29 @@
 	Year = {2001}}
 
 @techreport{gamepad20,
-Author={Steve Agoston and James Hollyer and Matt Reynolds},
-Institution={\textsc{w3c}},
-Note={\url{https://www.w3.org/TR/gamepad/}},
-Title={Gamepad},
-type={Working Draft 29 October 2020},
-Year={2020}}
+	Author = {Steve Agoston and James Hollyer and Matt Reynolds},
+	Institution = {\textsc{w3c}},
+	Note = {\url{https://www.w3.org/TR/gamepad/}},
+	Title = {Gamepad},
+	Type = {Working Draft 29 October 2020},
+	Year = {2020}}
 
 @techreport{webhid21,
-Author={Matt Reynolds},
-Institution={\textsc{wicg}},
-Note={\url{https://wicg.github.io/webhid/}},
-Title={Web\textsc{hid} \textsc{api}},
-type={Draft Community Group Report 08 January 2021},
-Year={2021}}
+	Author = {Matt Reynolds},
+	Institution = {\textsc{wicg}},
+	Note = {\url{https://wicg.github.io/webhid/}},
+	Title = {Web\textsc{hid} \textsc{api}},
+	Type = {Draft Community Group Report 08 January 2021},
+	Year = {2021}}
 
 @techreport{ng19,
 	Author = {Dominick Ng and Rory McClelland},
 	Note = {\url{https://goo.gle/access-to-powerful-features}},
 	Title = {Controlling Access to Powerful Web Platform Features},
 	Year = {2019}}
-	
-@misc{dino18,
-Author={Google Blog},
-Note={\url{https://www.blog.google/products/chrome/chrome-dino}},
-Title={As the Chrome dino runs, we caught up with the Googlers who built it},
-Year={2018}}	
 
+@misc{dino18,
+	Author = {Google Blog},
+	Note = {\url{https://www.blog.google/products/chrome/chrome-dino}},
+	Title = {As the Chrome dino runs, we caught up with the Googlers who built it},
+	Year = {2018}}
